--- a/Resources/Info.plist
+++ b/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>Geode</string>
+	<string>Dindeode</string>
 	<key>CFBundleName</key>
 	<string>Geode</string>
 	<key>CFBundleExecutable</key>
@@ -279,7 +279,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.geode.launcher</string>
+	<string>be.dimisaio.dindem</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
@@ -401,7 +401,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.geode.launcher.urlscheme</string>
+			<string>be.dimisaio.dindem.urlscheme</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>geode</string>
@@ -455,16 +455,12 @@
 	</array>
 	<key>SBAppUsesLocalNotifications</key>
 	<integer>1</integer>
-
-	<!-- Permissions -->
 	<key>NSMicrophoneUsageDescription</key>
 	<string>A mod you are using is requesting this permission.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>A mod you are using is requesting this permission.</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This permission is needed for accessing the JIT server.</string>
-
-	<!-- Handling .geode files -->
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -476,7 +472,7 @@
 			<string>Editor</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>com.geode.launcher.mod</string>
+				<string>be.dimisaio.dindem.mod</string>
 			</array>
 		</dict>
 	</array>
@@ -486,7 +482,7 @@
 			<key>UTTypeDescription</key>
 			<string>Geode Mod</string>
 			<key>UTTypeIdentifier</key>
-			<string>com.geode.launcher.mod</string>
+			<string>be.dimisaio.dindem.mod</string>
 			<key>UTTypeConformsTo</key>
 			<array>
 				<string>public.data</string>
